Fix the markdown body color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -80,7 +80,7 @@
 	/* FIX this here, clean up code I didn't use. */
 	--ifm-h1-primary-header: #ffffff;
 	--ifm-h2-primary-subheader: #ffffff;
-	--ifm-p-primary-body: #5F5F5F5;
+	--ifm-p-primary-body: #dadada;
 	--ifm-p-secondary-mini: #8c8c8c;
 
 	--ifm-footer-background-color: #262626;
